--- a/index.html
+++ b/index.html
@@ -225,9 +225,9 @@
           <div class="col-md-8 p-5">
             <p class="title" style="color: #fff;">Welcome Adddress</p>
             <p class="text-body" style="  color: #ffffff !important;">
-              Success Garden international Schools which comprises a nursery, primary and secondary is located okwuabala Ihioma, Orlu L.G.A, Imo State, Nigeria. Success Garden International School is a training college for children. We train them academically, spiritually, and physically, fully prepared for secondary education as caring, confident, independent, resilient, well rounded individuals with a real love for learning.
+              Welcome to Success Garden International Schools. This great school was established on the 5th day of September 2016. The school comprises of Success Garden International Secondary School for Jss 1-3, and sss 1-3 as well as Success Garden Montessori Academy (creche, nursery 1-3, Basic 1-6). Our records and achievements so far are synonymous with the motto of our school which is; shining the light, raising giants. 
               <br>
-              <p class="text-body" style="  color: #ffffff !important;">The bible says “train up a child in the way he should go so that when he is old, he will not depart from it”. At Success Garden International Schools, we have specialized subject teachers for French, Computers, Drama, Music, Sports, Science, etc. Our computer room allows our primary school children access to technology from an early age.
+              <p class="text-body" style="  color: #ffffff !important;">As a school, we aim to raise academic and economic giants to be active coaches and players rather than spectators in the 21st century. We combine both national and International curricula to raise dynamic students for both today and for posterity. We use technical subjects and technology as tools to raise professionals rather than making quick and half-baked students that end up as artisans. We have the government approved centers for the first school leaving certificate (FSLC), Basic Education Certificate Examination (BECE STATE AND FEDERAL), National examination council SSCE (NECO), and West African Senior School Certificate Examination (WASSCE). The testimony of the Success of our school speaks volumes through the attitude of our graduated students who are spread across different works of life. Welcome to your dream digital school.... welcome to Success Garden International Schools... Welcome to the world leaders school.
               </p>              
               <p>
                <h4 class="title" style=" color: #ffffff !important;">WHY WE ARE THE BEST</h4><br> 
@@ -265,16 +265,16 @@
             <img src="images/SG/head.jpeg" alt="Bonavista International Schools" width="100%">
           </div>
           <div class="dynamic-img " style="display: none;">
-            <img src="images/bon8.png" alt="Bonavista International Schools" width="100%">
+            <img src="images/SG/niceComplain.webp" alt="Bonavista International Schools" width="100%">
           </div>
           <div class="dynamic-img " style="display: none;">
-            <img src="images/mvc.png" alt="Bonavista International Schools" width="100%">
+            <img src="images/vision.jpg" alt="Bonavista International Schools" width="100%">
           </div>
           <div class="dynamic-img" style="display: none;">
-            <img src="images/mvc.png" alt="Bonavista International Schools" width="100%">
+            <img src="images/mission.jpg" alt="Bonavista International Schools" width="100%">
           </div>
           <div class="dynamic-img" style="display: none;">
-            <img src="images/mvc.png" alt="Bonavista International Schools" width="100%">
+            <img src="images/core2.jpg" alt="Bonavista International Schools" width="100%">
           </div>
           <div class="dynamic-img" style="display: none;">
             <img src="images/bon7.png" alt="Bonavista International Schools" width="100%">
@@ -282,11 +282,11 @@
           <div class="dynamic-text-container">
             <div class="dynamic-btn-container">
               <button class="dynamic-btn active">History</button>
-              <button class="dynamic-btn">Complaints Process </button>
+              <!-- <button class="dynamic-btn">Complaints Process </button>
               <button class="dynamic-btn">Vision </button>
               <button class="dynamic-btn">Mission </button>
-              <button class="dynamic-btn">Core Values</button>
-              <button class="dynamic-btn">Facilities</button>
+              <button class="dynamic-btn">Core Values</button> -->
+              <!-- <button class="dynamic-btn">Facilities</button> -->
             </div>
             <div class="dynamic-text" >
               Garden international Schools which comprises of Success Garden international Secondary School and Success Garden Montessori Academy (pre-school, creche, nursery, and primary) is located in the city of Okwuabala Ihioma, Orlu L.G.A , Imo State, Nigeria,was established on the 5th of September,2016 to raise academic giants.
@@ -342,7 +342,8 @@
             </div>
             <div class="dynamic-text" style="display: none;">
               <ul>
-                <li>Well equipped Home-Economics/ICT Laboratories</li>
+                <li><b>RESPECT</b>:
+                  Based on principles of love, faith and hope, be willing to understand difference and to honour its value.</li>
                 <li>Fully-stocked Libraries</li>
                 <li>Spacious Classrooms & comfortable school buses</li>
                 <li>Certified and Seasoned Teaching and Non-Teaching Personel</li>
@@ -396,11 +397,11 @@
       </div>
     </div> -->
 
-    <div class="container board">
+    <!-- <div class="container board">
       <div class="row ">
         <div class="bd-title col-sm-12 col-md-12">
             GENERAL STAFF
-        </div>
+        </div> -->
         <!-- <div class="col-md-12 staff-info">
             <img src="images/staffs.png" alt="" style="width: 50%;">
             <figcaption class="staff-names"> <strong>FROM BACK LEFT ROW:</strong> Miss. Muritala Ajarat (Ass. Teacher),
