--- a/admission.html
+++ b/admission.html
@@ -96,14 +96,14 @@
   </nav>
   <!-- NAV BAR ENDS -->
     
-     <div style="background-image: url(images/admission-process.jpg);" class="nav-hero">
+     <div style="background-image: url(images/SG/b10.jpeg);" class="nav-hero">
         <div class="nav-hero-content">  Admissions
 
         </div>
      </div>
      <div class="row  mt-5">
         <div class="col-md-6">
-          <img src="images/admission.jpg" width="100%"/>
+          <img src="images/success garden.png" width="100%"/>
         </div>
         <div class="col-md-6 p-5">
           <p class="section-title ">Admission Process </p>
@@ -138,7 +138,7 @@
           <div class="row">
             <div class="col-md-4">
               <div class="footer-logo">
-                <img src="images/SG/logo-removebg-preview.png" width="14%"/>
+                <img src="images/success garden.png" width="14%"/>
                 <div class="footer-logo-title">
                   <span class="logo-title">Success Garden Schools </span> </br>
                   <span class="moto" style="color: #ffff;">Motto: Shining the light...raising giants</span>
