--- a/chairman.html
+++ b/chairman.html
@@ -192,6 +192,7 @@
                   </li>
                 </ul>
             </div>
+            <img style="width: 470px;" src="images/join us.jpg">
             <!-- <div class="col-md-4">
                 <div class="footer-title">Contact Us</div>
                 <form class="row">
