--- a/contact.html
+++ b/contact.html
@@ -167,6 +167,9 @@
                 </li>
               </ul>
           </div>
+          <div class="col-md-4">
+            <img style="width: 470px;" src="images/join us.jpg">
+          </div>
           <!-- <div class="col-md-4">
               <div class="footer-title">Contact Us</div>
               <form class="row">
