--- a/index.html
+++ b/index.html
@@ -229,19 +229,19 @@
               <br>
               <p class="text-body" style="  color: #ffffff !important;">As a school, we aim to raise academic and economic giants to be active coaches and players rather than spectators in the 21st century. We combine both national and International curricula to raise dynamic students for both today and for posterity. We use technical subjects and technology as tools to raise professionals rather than making quick and half-baked students that end up as artisans. We have the government approved centers for the first school leaving certificate (FSLC), Basic Education Certificate Examination (BECE STATE AND FEDERAL), National examination council SSCE (NECO), and West African Senior School Certificate Examination (WASSCE). The testimony of the Success of our school speaks volumes through the attitude of our graduated students who are spread across different works of life. Welcome to your dream digital school.... welcome to Success Garden International Schools... Welcome to the world leaders school.
               </p>              
-              <p>
+              <!-- <p>
                <h4 class="title" style=" color: #ffffff !important;">WHY WE ARE THE BEST</h4><br> 
                <p class="text-body" style="  color: #ffffff !important;">Conducive learning environment
                 Well equipped computer laboratories
                 Qualified, dedicated, and God-fearing teachers
                 Learning materials for research and creativity</p>
-                </p>
-                <h4 class="title" style="  color: #ffffff !important;">OBJECTIVES OF SUCCESS GARDEN INTERNATIONAL SCHOOLS</h4><br>
+                </p> -->
+                <!-- <h4 class="title" style="  color: #ffffff !important;">OBJECTIVES OF SUCCESS GARDEN INTERNATIONAL SCHOOLS</h4><br>
                 <p class="text-body" style="  color: #ffffff !important;">To provide an atmosphere that promotes respect and concern for all individuals</p>
                 <p class="text-body" style="  color: #ffffff !important;">To provide stimulating materials and guidance in their use of materials that will enable each child to realize his/her full potential.</p>
                 <p class="text-body" style="  color: #ffffff !important;">To encourage rational thinking, fair play, self reliance and individual freedom and responsibility.</p>
                 <p class="text-body" style="  color: #ffffff !important;">To provide opportunities for exploration and creativity.</p>
-                <p class="text-body" style="  color: #ffffff !important;">To respect each child’s individuality and promote attitudes, interests, and understanding which will enable him/her to be happy, secure, and contributing member of society</p>
+                <p class="text-body" style="  color: #ffffff !important;">To respect each child’s individuality and promote attitudes, interests, and understanding which will enable him/her to be happy, secure, and contributing member of society</p> -->
             </p>
           </div>
 
@@ -526,6 +526,9 @@
                     <a href="gallery.html">Gallery</a>
                   </li>
                 </ul>
+            </div>
+            <div class="col-md-4">
+              <img style="width: 470px;" src="images/join us.jpg">
             </div>
             <!-- <div class="col-md-4">
                 <div class="footer-title">Contact Us</div>
